# ChangeLog for sci-libs/factory
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*factory-3.1.1-r1 (04 Sep 2010)

  04 Sep 2010; François Bissey <f.r.bissey@massey.ac.nz>
  +factory-3.1.1-r1.ebuild:
  Import Christopher's version of factory migrated to the autotools-utils
  eclass.

  22 Aug 2010; François Bissey <f.r.bissey@massey.ac.nz>
  factory-3.1.1.ebuild:
  Keyword ~ppc (I have the hardware).

  11 Jul 2010; Kacper Kowalik <xarthisius@gentoo.org>
  files/factory-3.1.1-gentoo.diff:
  fix as-needed issue and parallel build

  10 Jul 2010; Kacper Kowalik <xarthisius@gentoo.org> -factory-3.1.0.ebuild,
  -files/patch-3.1.0b:
  remove old

  10 Jul 2010; Kacper Kowalik <xarthisius@gentoo.org> factory-3.1.1.ebuild,
  +files/factory-3.1.1-gentoo.diff:
  Make shared libs, fix install paths, QA

*factory-3.1.1 (07 Jul 2010)

  07 Jul 2010; Thomas Kahle <tom111@gmx.de> +factory-3.1.1.ebuild:
  Bump to 3.1.1

  26 Nov 2009; Thomas Kahle <tom111@gmx.de>
  QA Fixes

  24 Nov 2009; Thomas Kahle <tom111@gmx.de> +factory-3.1.0.ebuild
  +ChangeLog +metadata.xml

  Initial upload
  Bug #294475